# humantime

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  publish.yml
python/humantime/: __init__.py
src/: lib.rs
tests/: test_humantime.py
