[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "humantime"
version = "0.1.0"
description = "Python bindings for the Rust humantime crate"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "maturin>=1.4,<2.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "humantime._humantime"

[tool.pytest.ini_options]
testpaths = ["tests"]
